--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-slick": "^0.29.0",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
     "tailwindcss-animated": "^1.0.1",
