--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate":"cd src/app/api/graphql && graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.8.0-rc.1",
+    "@apollo/datasource-rest": "^6.0.1",
+    "@apollo/server": "^4.9.1",
+    "@as-integrations/next": "^2.0.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -18,6 +22,8 @@
     "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "graphql": "^16.8.0",
+    "graphql-tag": "^2.12.6",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
@@ -30,5 +36,11 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1"
   }
 }
