Configured graphql/client and connected to the graphql/server

--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate":"cd src/app/api/graphql && graphql-codegen"
+    "generate": "cd src/app/api/graphql && graphql-codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.0-rc.1",
+    "@apollo/client": "^3.8.0-rc.2",
     "@apollo/datasource-rest": "^6.0.1",
+    "@apollo/experimental-nextjs-app-support": "^0.4.1",
     "@apollo/server": "^4.9.1",
-    "@as-integrations/next": "^2.0.2",
-    "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
+    "@as-integrations/next": "^2.0.1",
+    "@types/node": "20.5.1",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "graphql": "^16.8.0",
