--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "startDep": "node ./dist/index.js",
-    "start": "tsc-watch --onSuccess \"node ./dist/index.js\"",
+    "start": "nodemon ./dist/index.js",
+    "startDev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
     "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
     "watch": "npx ts-node index.ts",
     "build": "tsc",
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
+    "nodemon": "^3.0.1",
     "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
