--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@clerk/clerk-react": "^4.24.0",
     "@emailjs/browser": "^3.11.0",
     "@types/react-slick": "^0.23.10",
     "dotenv": "^16.3.1",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "ts-pattern": "^5.0.5",
     "yup": "^1.2.0"
   },
   "browserslist": {
