--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@apollo/client": "^3.8.1",
     "@clerk/clerk-react": "^4.24.0",
+    "@clerk/themes": "^1.7.6",
+    "@clerk/types": "^3.52.0",
     "@emailjs/browser": "^3.11.0",
     "@types/react-slick": "^0.23.10",
     "dotenv": "^16.3.1",
