--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.1",
     "@clerk/clerk-react": "^4.24.0",
+    "@clerk/clerk-sdk-node": "^4.12.10",
     "@clerk/themes": "^1.7.6",
     "@clerk/types": "^3.52.0",
     "@emailjs/browser": "^3.11.0",
