--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@clerk/types": "^3.52.0",
     "@emailjs/browser": "^3.11.0",
     "@types/react-slick": "^0.23.10",
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "formik": "^2.4.3",
     "graphql": "^16.8.0",
